freest/test/prog/Invalid/SessionPatterns/VarAndIn/VarAndIn.fst
module VarAndIn where

f : ?Int -> Skip
f c = snd (receive c)
f (?_ ; c) = c